...
                ) : (
                    <TouchableOpacity
                        style={[styles.btnContacto, { backgroundColor: colors.buttonMain }]}
                        onPress={() => {
                            onClose()
                            navigation.navigate("Navigator", {
                                screen: "Inmuebles",
                                params: {
                                    screen: "AgendarCita",
                                    params: { inmueble, token }
                                }
                            })
                        }}
                    >
                        <MaterialCommunityIcons name="calendar" size={18} color="#fff"/>
                        <Text style={styles.btnContactoTexto}>Agendar Cita</Text>
                    </TouchableOpacity>
                )}

                {/* 
                <TouchableOpacity
                    style={[styles.btnContacto, { backgroundColor: colors.buttonMain }]}
...
