...
            {/* Modal TimePicker */}
            <DateTimePickerModal
                isVisible={modalHora}
                mode="time"
                onConfirm={onTimeConfirm}
                onCancel={() => setModalHora(false)}
                confirmTextIOS="Confirmar"
                cancelTextIOS="Cancelar"
                is24Hour={true}
            />

            {/* Modal Vista Previa */}
            <Modal visible={previsualizando} animationType="slide" presentationStyle="pageSheet" onRequestClose={() => setPrevisualizando(false)}>
...
