...
                            })}
                        </View>

                    </ScrollView>
                    <View style={[styles.footer, { borderTopColor: colors.border, backgroundColor: colors.background }]}>
                        <TouchableOpacity style={[styles.btnAplicar, { backgroundColor: colors.buttonMain }]} onPress={handleApply}>
                            <Text style={styles.btnText}>Aplicar Filtros</Text>
                        </TouchableOpacity>
                    </View>
                </View>
            </View>
        </Modal>
    );
...
